# fall-2022-127-work-zaraamerr

./: .replit  README.org  advanced_lists.py  chapter12.py  listlab.py  pyproject.toml
9-15/: answers.py
HW-9-12/: turtle-functions.py
Intro/: intro.py
c++/: a.out  basics.cpp  control.cpp  intro.cpp  loops.cpp
chapter 2/: circ.py  clock.py
chapter-10/: list1.py  lists2.py
chapter-2/: sent.py
chapter_4/: one.py  seven.py  three.py
cpp/: a.out  main  main.cpp
csv/: csv-demo.py  demo.csv
data/: data.py
data-sorting-project/: data.py
dicts/: bow.py  scandal.txt  stopwords.txt
lists/: listdemos.py  piglatin (copy).py  piglatin_sentence.py
mode/: modes.py
piglatin/: fizzbuzz.py  iteration.py  piglatin.py
programs/: chapter12.py  dictionary-demo.py  intro.py  listlab.py  lists2.py  math.py  modes.py  piglatin (copy).py  seven.py  stringstuff.py  t1.py  three.py  turtle-functions.py
project-01-madlibs/: madlibs.py  madlibsstory.txt
project-02-speak/: input.txt  pirate.py  speak.py
strings/: stringstuff.py
turtle/: t1.py  t2.py
turtles/: t1.py  t2.py
